--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -7,21 +7,22 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@drawable/bg2">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center"
-        >
+        android:gravity="center">
+
         <EditText
             android:inputType="textEmailAddress"
-            android:background = "@drawable/rounded"
+            android:background="@drawable/rounded"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:padding="3dp"
             android:hint="Email"
-            android:id="@+id/emailInput" />
+            android:id="@+id/emailInput"/>
         <EditText
             android:inputType="textPassword"
             android:layout_width="150dp"
