--- a/Resources/layout/layoutGame.xml
+++ b/Resources/layout/layoutGame.xml
@@ -40,21 +40,21 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="33"
-            android:id="@+id/scrollView1" />
-        <LinearLayout
-            android:orientation="horizontal"
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/linearLayout2" />
-
+            android:id="@+id/scrollOne" />
         <ScrollView
             android:minWidth="25px"
             android:minHeight="25px"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/scrollView2" />
+            android:layout_weight="33"
+            android:id="@+id/scrollTwo" />
+        <ScrollView
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="33"
+            android:id="@+id/scrollThree" />
     </LinearLayout>
 
 
