--- a/Resources/layout/layoutGame.xml
+++ b/Resources/layout/layoutGame.xml
@@ -21,7 +21,6 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_width="172.0dp"
             android:layout_height="match_parent"
-            android:fontFamily="@font/Rubik"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:id="@+id/textView1" />
@@ -33,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="97.5"
-        android:weightSum="99"
+        android:weightSum="100"
         android:id="@+id/linearLayout1" >
         <ScrollView
             android:minWidth="25px"
@@ -49,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="33"
-            android:id="@id/scrollSum">
+            android:id="@+id/scrollSum">
             <LinearLayout
                 android:orientation="horizontal"
                 android:minWidth="25px"
@@ -75,10 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="50"
-                    
                     android:id="@+id/sumOne" />
-
-
             </LinearLayout>
         </ScrollView>
         <ScrollView
@@ -86,7 +82,7 @@
             android:minHeight="25px"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="33"
+            android:layout_weight="34"
             android:id="@+id/scrollThree" >
         </ScrollView>
     </LinearLayout>
