--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -5,9 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="@drawable/bg2">
-
+    android:gravity="center">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,7 +48,6 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/Inter"
                 android:textFontWeight="800"
                 android:id="@+id/buttonSignIn" />
             <Button
@@ -61,7 +58,6 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/Inter"
                 android:textFontWeight="800"
                 android:id="@+id/buttonRegister" />
         </LinearLayout>
