--- a/Resources/layout/layoutGame.xml
+++ b/Resources/layout/layoutGame.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal"
         android:minWidth="25px"
         android:minHeight="25px"
-        android:layout_width="147.0dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_weight="2.5"
@@ -47,7 +47,7 @@
             android:minHeight="25px"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="33"
+            android:layout_weight="34"
             android:id="@+id/scrollSum">
             <LinearLayout
                 android:orientation="horizontal"
@@ -82,7 +82,7 @@
             android:minHeight="25px"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="34"
+            android:layout_weight="33"
             android:id="@+id/scrollThree" >
         </ScrollView>
     </LinearLayout>
