--- a/Resources/layout/layoutGame.xml
+++ b/Resources/layout/layoutGame.xml
@@ -25,7 +25,7 @@
             android:textColor="#ffffff"
             android:id="@+id/textView1" />
     </LinearLayout>
-    <LinearLayout
+        <ListView
         android:orientation="horizontal"
         android:minWidth="25px"
         android:minHeight="25px"
@@ -33,6 +33,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="97.5"
         android:weightSum="100"
-        android:id="@+id/linearLayout1">
-    </LinearLayout>
+        android:id="@+id/GameContainer">
+    </ListView>
 </LinearLayout>
