--- a/Resources/layout/layoutGame.xml
+++ b/Resources/layout/layoutGame.xml
@@ -31,8 +31,29 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="97.5"
+        android:layout_weight="90"
         android:weightSum="100"
         android:id="@+id/GameContainer">
     </ListView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
+    <EditText
+        android:inputType="number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#ffffff"
+        android:id="@+id/NumberInput" />
+    <Button
+        android:text="Submit"
+        android:background="@drawable/roundedbutton"
+        android:textAllCaps="false"
+        android:textFontWeight="800"
+        android:layout_gravity="center"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button1" />
+    
 </LinearLayout>
